ingress-glitchtip.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: sentry-system
  name: glitchtip-web
  annotations:
    cert-manager.io/issuer: origin-ca-issuer
    cert-manager.io/issuer-kind: ClusterOriginIssuer
    cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    external-dns.alpha.kubernetes.io/hostname: glitchtip.dev.cuemby.net
    ingress.kubernetes.io/proxy-body-size: "0"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - glitchtip.dev.cuemby.net
      secretName: glitchtip-dev-cuemby-net
  rules:
  - host: glitchtip.dev.cuemby.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: glitchtip-web
            port:
              number: 80
